--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Boilerplate para projetos NodeJS",
   "main": "app.js",
   "dependencies": {
-    "@b2wads/logger": "2.0.0",
-    "express": "4.17.1"
+    "@b2wads/logger": "2.0.0"
   },
   "devDependencies": {
     "chai": "4.2.0",
@@ -20,8 +19,7 @@
     "eslint-plugin-you-dont-need-lodash-underscore": "6.10.0",
     "mocha": "8.1.3",
     "nyc": "15.1.0",
-    "prettier": "2.1.2",
-    "supertest": "5.0.0"
+    "prettier": "2.1.2"
   },
   "scripts": {
     "deps": "docker-compose up --build --force-recreate",
@@ -32,13 +30,11 @@
     "fmt:check": "npm run prettier:check && npm run eslint:check",
     "prettier": "./node_modules/.bin/prettier --write \"**/{*.js,*.json,bin/**}\"",
     "prettier:check": "./node_modules/.bin/prettier --check \"**/{*.js,*.json,bin/**}\"",
-    "start": "node ./bin/www",
     "test": "./node_modules/.bin/nyc mocha --reporter spec",
     "test:coverage-report": "nyc report --reporter=text-lcov > coverage.lcov",
     "test:acceptance": "npm t test/acceptance/*",
     "test:integration": "npm t test/integration/*",
-    "test:unit": "npm t test/unit/*",
-    "worker:<worker-name>": "node workers/<worker-name.js>"
+    "test:unit": "npm t test/unit/*"
   },
   "repository": {
     "type": "git",
