--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,8 +35,8 @@ jobs:
 
     steps:
       - checkout
-      - node/install:
-          node-version: <<parameters.node-version>>
+      - run:
+          command: nvm use
       - node/install-packages
       - run:
           command: npm run deps:detached && sleep 10
