--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,9 +35,8 @@ jobs:
 
     steps:
       - checkout
-      - node/install:
-          node-version: <<parameters.node-version>>
-          install-npm: false
+      - run:
+          command: nvm install <<parameters.node-version>>
       - run:
           command: nvm use
       - node/install-packages
