Tentativa de correcao de config circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,5 +63,5 @@ workflows:
     jobs:
       - all-tests:
           name: tests-node-lts
-          node-version: lts/*
+          node-version: "lts/*"
 
