--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "app.js",
   "dependencies": {
     "@b2wads/env-o-loader": "^1.0.2",
-    "@b2wads/logger": "2.0.0",
     "amqplib": "^0.6.0",
     "async-promise-pool": "^1.0.3",
-    "mongodb": "^3.6.2"
+    "mongodb": "^3.6.2",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "chai": "4.2.0",
